syntax = 'proto3';

message User {
  string user_name = 1;
  string email = 2;
  string password = 3;
  string id = 4;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){};
  rpc GetUser(GetUserRequest) returns (GetUserResponse){};
  rpc CreateToken(CreateTokenRequest) returns (CreateTokenResponse){};
  rpc IsAuthenthenticated(IsAuthenticatedRequest) returns (IsAuthenticatedResponse){};
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  int32 id = 1;
};

message GetUserRequest {
    int32 id = 1;
};

message GetUserResponse {
  User user = 1;
};

message CreateTokenRequest {
  User user = 1;
};

message CreateTokenResponse {
  string token = 1;
};

message IsAuthenticatedRequest {
  User user = 1;
};

message IsAuthenticatedResponse {
  User user = 1;
  bool ok = 2;
};
